versioned_docs/version-3.1.0/miscellaneous/changelog.md
---
sidebar_position: 3
---
# Change Log

### Version 3.1.0 (Nov 5th, 2021)
* **[Core]** Support insertion and removal into linked local key lists
* **[Pymongo]** Fixed multiword bug when including
* **[Pymongo]** Fixed multiword bug when ordering
* **[Pymongo]** Support insertion and removal into linked local key lists
* **[CLI]** Added CLI, a great user experience way to create new project

### Version 3.0.2 (Oct 29th, 2021)
* **[Core]** Do not output partial non-picked fields to JSON
* **[Core]** Do not output null value to JSON by default
* **[Core]** Added `output_null` option to `@jsonclass`
* **[Pymongo]** Add `inflection` as formal dependency
* **[Server]** Added unit tests

### Version 3.0.1 (Oct 28th, 2021)
* **[Core]** Added modifier `len`
* **[Core]** Added modifier `securepw`
* **[Core]** Auto install `inflection` package
* **[Pymongo]** Added compare descriptors in string query
* **[Core]** Bug fixes
* **[Pymongo]** Bug fixes
* **[Server]** Bug fixes
